--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -6,11 +6,34 @@
 body{
     padding: 0;
     background-color: #7D5A50;
+    font-family: 'Josefin Sans', sans-serif;
+}
+
+.btn{
+    background-color: #7D5A50;
+    color: #FCDEC0;
+    font-weight: 800;
+    border: 1px solid #FCDEC0;
+    width: 10vw;
+    margin-top: 2vh;
+}
+
+.btn:hover{
+    background-color: #E5B299;
+    color:#7D5A50;
+    font-weight: bolder;
+    font-size: large;
+    border: 1px solid #7D5A50;
+    width: 10vw;
 }
 
 /* Navbar */
 ul,li{
     list-style: none;
+}
+
+.navbar{
+    padding: 1vw;
 }
 
 .navbar-collapse{
@@ -23,7 +46,7 @@ ul,li{
     color: #FCDEC0;
     text-decoration: none;
     padding: 1vw;
-    font-size:4rem;
+    font-size:5rem;
     font-weight: 700;
 }
 
@@ -31,7 +54,7 @@ ul,li{
     font-family: 'Dancing Script', cursive;
     color: #FCDEC0;
     text-decoration: none;
-    font-size: 5rem;
+    font-size: 6rem;
 }
 
 .nav-link{
@@ -54,3 +77,18 @@ ul,li{
 .navbar-toggle{
     background-color: #FCDEC0;
 }
+
+/* Signup page styling */
+.signup-card{
+    width: 35%;
+    border: #B4846C 2px solid;
+    border-radius: 12px;
+    background-color: #FCDEC0;
+    padding: 8vh 6vh;
+    color: #7D5A50;
+    font-weight: 500;
+    font-size: large;
+}
+
+
+
