--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -5,7 +5,10 @@
 <div class="signup" align="center">
     <div class="div">
         <div class="card signup-card">
-            {{wtf.quick_form(registration_form)}}
+            {{wtf.quick_form(signup_form)}}
+        </div>
+        <div class="sign-in-text">
+            <p>Already have an account? <a class="page-links" href="{{url_for('auth.signin')}}">SignIn here</a></p>
         </div>
     </div>
 </div>
