--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -4,12 +4,14 @@
 {% block content %}
 <div class="signup" align="center">
     <div class="div">
+        <span class="circle"></span>
         <div class="card signup-card">
             {{wtf.quick_form(signup_form)}}
         </div>
         <div class="sign-in-text">
             <p>Already have an account? <a class="page-links" href="{{url_for('auth.signin')}}">SignIn here</a></p>
         </div>
+        <span class="star"></span>
     </div>
 </div>
 {% endblock %}
