--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -17,9 +17,18 @@
             <li class="nav-item">
                 <a class="nav-link disabled" href="#">Marketing</a>
             </li>
+            {% if current_user.is_authenticated %}
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">SignIn</a>
+                <a class="nav-link disabled" href="{{url_for('main.profile',uname=current_user.username)}}">Profile</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link disabled" href="{{url_for('auth.signout')}}">Sign out</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+                <a class="nav-link disabled" href="{{url_for('auth.signin')}}">Sign in</a>
+            </li>
+            {%endif%}
         </ul>
     </div>
 </nav>
