--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,13 +9,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Tech<span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="/category/Tech">Tech<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Sales</a>
+                <a class="nav-link" href="/category/Sales">Sales</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link disabled" href="#">Marketing</a>
+                <a class="nav-link disabled" href="/category/Marketing">Marketing</a>
             </li>
             {% if current_user.is_authenticated %}
             <li class="nav-item">
