--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,7 +13,7 @@
             In life, you only have 60 seconds to impress someone. 1 minute can make or break you. How do we make sure that you use your 1 minute to actually say something meaningful? 
         </p>
         <p class="about-us">
-            Create pitches and get insight on other pitches by our vast community.
+            Create pitches and get insight from our vast community.
         </p><br><br>
         <a class="btn-primary" href="{{url_for('main.create_pitch',userid=current_user.id,uname=current_user.username)}}">
             CREATE NEW PITCH
