--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light nav-styles">
-    <a class="navbar-brand" id="navbar-brand" href="#">Pitch-Me</a>
+    <a class="navbar-brand" id="navbar-brand" href="/">Pitch-Me</a>
     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
