Add comments and upvotes/downvotes models

--- a/app/templates/category/tech-pitch.html
+++ b/app/templates/category/tech-pitch.html
@@ -14,7 +14,7 @@
                     <span>Authored By: {{pitch.user_name}}</span><br>
                     <div class="vote-section" align="center">
                         <p>
-                            <span>&#128077; {{pitch.upvote}}</span><span>&#128078; {{pitch.downote}}</span>
+                            <span>&#128077; {{pitch.upvote}}</span><span>&#128078; {{pitch.downvote}}</span>
                         </p>
                     </div>
                     <div class="" align="center"><a href="#" class="btn">View Comments</a></div>
