--- a/app/templates/category/tech-pitch.html
+++ b/app/templates/category/tech-pitch.html
@@ -18,7 +18,7 @@
                             <a href="/downvotes/{{pitch.id}}" class="btn-success"><span>&#128078; {{pitch.downvotes.count()}}</span></a>
                         </p>
                     </div>
-                    <div class="" align="center"><a href="/comments/{{pitch.id}}" class="btn">View Comments</a></div>
+                    <div class="" align="center"><a href="/pitch/comments/{{pitch.id}}" class="btn">View Comments</a></div>
                 </div>
             </div>
         </div>
