--- a/app/templates/category/tech-pitch.html
+++ b/app/templates/category/tech-pitch.html
@@ -7,7 +7,7 @@
     <div class="row">
         {% for pitch in tech_pitches%}
         <div class="col-xs-12 col-sm-4 col-md-4 col-lg-2 pitch-card">
-            <div class="card">
+            <div class="card" align="center">
                 <div class="card-body">
                     <h5 class="card-title"></h5>
                     <p class="card-text">{{pitch.pitch}}</p>
