--- a/app/templates/category/tech-pitch.html
+++ b/app/templates/category/tech-pitch.html
@@ -2,7 +2,7 @@
 {% import 'macros.html' as macro with context %}
 
 {% block content %}
-<div class="display-pitches-category center">
+<div class="display-pitches-category">
     {% if tech_pitches %}
     <div class="row">
         {% for pitch in tech_pitches%}
