--- a/app/templates/display-comments.html
+++ b/app/templates/display-comments.html
@@ -4,8 +4,8 @@
 <div class="display-comments">
     <div class="row">
         <div class="col-md-1"></div>
-        <div class="col-md-5 pitch-card pitch-card-display">
-            <div class="card pitch-card-each">
+        <div class="col-md-5 pitch-card pitch-card-display" >
+            <div class="card pitch-card-each" align="center">
                 <div class="card-body">
                     <h5 class="card-title"></h5>
                     <p class="card-text">{{pitch.pitch}}</p>
