--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 
 {% block content %}
 <div class="container profile-page">
@@ -35,8 +35,8 @@
                     {% endif %}
                 </div>
                 {% if user == current_user %}
-                <span class="page-links" href="{{url_for('main.update_profile',uname=user.username)}}">Edit
-                    profile</span>
+                <a class="page-links" href="{{url_for('main.update_profile',uname=user.username)}}">Edit
+                    profile</a>
                 {% endif %}
             </div>
         </div>
