--- a/app/templates/auth/signin.html
+++ b/app/templates/auth/signin.html
@@ -4,14 +4,15 @@
 {% block content %}
 <div class="signin" align="center">
     <div class="div">
-        <span class="star"></span>
         <div class="card signup-card">
             {{wtf.quick_form(signin_form)}}
         </div>
         <div class="sign-in-text">
-            <p>Don't have an account? <a class="page-links" href="{{url_for('auth.signup')}}">SignUp here</a></p>
-        </div>
-        <span class="circle"></span>
+            <span class="star">
+            </span><p>Don't have an account? 
+                <a class="page-links" href="{{url_for('auth.signup')}}">SignUp here</a>
+            </p>
+        </div> 
     </div>
 </div>
 {% endblock %}
