--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -26,7 +26,7 @@
             </li>
             {% else %}
             <li class="nav-item">
-                <a class="nav-link disabled" href="{{url_for('auth.signin')}}">Sign in</a>
+                <a class="nav-link disabled" href="{{url_for('auth.login')}}">Sign in</a>
             </li>
             {%endif%}
         </ul>
