Correct sign up and sign in links

--- a/app/templates/auth/signin.html
+++ b/app/templates/auth/signin.html
@@ -10,7 +10,7 @@
         <div class="sign-in-text">
             <span class="star">
             </span><p>Don't have an account? 
-                <a class="page-links" href="{{url_for('auth.signup')}}">SignUp here</a>
+                <a class="page-links" href="/authenticate/signup">SignUp here</a>
             </p>
         </div> 
     </div>
