--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -8,7 +8,7 @@
             {{wtf.quick_form(signup_form)}}
         </div>
         <div class="sign-in-text">
-            <p>Already have an account? <a class="page-links" href="{{url_for('auth.signin')}}">SignIn here</a></p>
+            <p>Already have an account? <a class="page-links" href="{{url_for('auth.login')}}">SignIn here</a></p>
         </div>
         <span class="star"></span>
     </div>
